# PacketLens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
packetlens/: __init__.py  analyzer.py  cli.py  decode.py  gui.py  models.py  pcap.py  report.py
tests/: test_packetlens.py
