[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "packetlens"
version = "0.1.0"
description = "A dependency-free PCAP analyzer for protocol inspection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chase Stone" }]

[project.scripts]
packetlens = "packetlens.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetlens*"]
