[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "packetlens"
version = "0.2.1"
description = "A dependency-free PCAP analyzer for protocol inspection."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Chase Stone" }]

[project.scripts]
packetlens = "packetlens.cli:main"
packetlens-gui = "packetlens.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetlens*"]
